Combine topics endpoint from  cessda.skg-if-openapi.elsst.server, fix CESSDA CV issue and PI issue for Products
